--- a/src/app/style.less
+++ b/src/app/style.less
@@ -1,6 +1,9 @@
 body {
 	padding: 0;
 	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	background: #303030;
+	color: white;
 }
 .row {
 	width: 500px;
@@ -38,9 +41,14 @@ body {
 	}
 
 	& .main-block, .left-bar, .right-bar {
-		border: 1px solid yellowgreen;
+		border: 1px solid rgba(255,255,255,.1);
 		border-radius: 3px;
 		padding: 15px;
+
+		& ul {
+			list-style: none;
+    		padding: 0;
+		}
 	}
 
 }
@@ -57,4 +65,118 @@ body {
 		border-radius: 3px;
 		border: 1px solid yellowgreen;
 	}
+}
+
+
+
+
+
+
+.message {
+	background: #424242;
+    color: white;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    position: relative;
+    border-radius: 2px;
+    font-size: 13px;
+    margin-bottom: 5px;
+}
+
+.message-img {
+	position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 36px;
+    width: 36px;
+}
+
+.message-img img{
+	border-radius: 50%;
+	width: 100%;
+	height: 100%;
+}
+
+.message-wrapper{
+	margin-left: 56px;
+	padding: 10px 10px 6px 0;
+}
+
+.message-autor {
+	font-weight: 700;
+}
+.message-autor span {
+	font-weight: 400;
+	color: rgba(255, 255, 255, 0.5);
+	padding-left: 5px;
+}
+
+.message-label {
+	padding: 5px 0;
+}
+
+.message.light {
+	background: #626262;
+	line-height: 24px;
+
+	& .message-wrapper {
+		margin-left: 0;
+		text-align: center;
+		font-size: 17px;
+		padding: 10px;
+
+		& input {
+			width: 100%;
+		    border: 0;
+		    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+		    background: transparent;
+		    line-height: 20px;
+		    color: white;
+		    padding-top: 2px;
+
+		    &:focus {
+		    	outline: none;
+		    	border-color: white;
+		    }
+
+		    &::-webkit-input-placeholder {color:rgba(255, 255, 255, 0.4);}
+		    &::-moz-placeholder          {color:rgba(255, 255, 255, 0.4);}/* Firefox 19+ */
+		    &:-moz-placeholder           {color:rgba(255, 255, 255, 0.4);}/* Firefox 18- */
+		    &:-ms-input-placeholder      {color:rgba(255, 255, 255, 0.4);}
+		}
+	}
+}
+.message.light .message-back{
+	padding: 0 10px;
+	position: absolute;
+	line-height: 42px;
+	
+	& span{
+		font-size: 16px;
+	}
+}
+
+a{
+	text-decoration: none;
+    color: white;
+}
+
+
+.answer {
+	opacity: 1;
+	height: 14px;
+	line-height: 14px;
+	margin-bottom: 10px;
+	font-size: 12px;
+	padding: 5px 0 0 56px;
+	font-style: italic;
+}
+
+.answer span{
+	opacity: 0;
+}
+
+@keyframes show {
+	from {opacity: 0;}
+	50% {opacity: 1;}
+	to {opacity: 0;}
 }
