--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,7 +3,9 @@
 
 
 
-<div class="avatar"></div>
+<div class="avatar">
+	<img *ngIf="visibleAvatar" src="https://imgur.com/L3MD9ZS.jpg" alt="">
+</div>
 
 <div class="auth-form message light">
 	<div class="message-wrapper">
