--- a/src/app/style.less
+++ b/src/app/style.less
@@ -21,7 +21,7 @@ body {
 	left: 0;
 	bottom: 0;
 	right: 0;
-	background: rgba(40,70,200,.5);
+	// background: rgba(40,70,200,.5);
 	z-index: 100;
 	justify-content: center;
     align-items: center;
@@ -34,6 +34,13 @@ body {
 	border-radius: 50%;
 	margin: 30px auto;
 	box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	overflow: hidden;
+	
+	& img {
+		animation: msg-show2 .5s linear;
+		border-radius: 50%;
+		border: 1px solid red;
+	}
 }
 
 .container{
@@ -193,6 +200,12 @@ a{
 	from {opacity: 0;}
 	10% {opacity: 0;}
 	to {opacity: 1;}
+}
+@keyframes msg-show2 {
+	from {opacity: 0;}
+	50% {}
+	80% {opacity: 1;}
+	to {}
 }
 
 msg .message, msg-in-list .message {
