--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,121 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+	padding: 0;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	background: #303030;
+	color: white;
+}
+
+.container-spanner circle {
+    transition-property: stroke;
+    animation-duration: 4s;
+    animation-timing-function: cubic-bezier(.35,0,.25,1);
+    animation-iteration-count: infinite;
+
+    fill: transparent;
+    transform-origin: center;
+    transition: stroke-dashoffset 225ms linear;
+
+    animation-name: mat-progress-spinner-stroke-rotate-100; 
+    stroke-dasharray: 282.743px; 
+    stroke-width: 8%;
+
+    stroke: #40a8cc;
+}
+
+.container-spanner {
+    animation: mat-progress-spinner-linear-rotate 2s linear infinite;
+    width: 50px; 
+    height: 50px;
+    & svg {
+    	width: 50px; 
+    	height: 50px;
+    }
+}
+
+@keyframes mat-progress-spinner-linear-rotate {
+	0% {transform: rotate(0);}
+	100% {transform: rotate(360deg);}
+}
+
+@keyframes mat-progress-spinner-stroke-rotate-100 {
+	0% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotate(0);
+	}
+	12.5% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotate(0);
+	}
+	12.51% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotateX(180deg) rotate(72.5deg);
+	}
+	25% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotateX(180deg) rotate(72.5deg);
+	}
+	25.1% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotate(270deg);
+	}
+	37.5% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotate(270deg);
+	}
+	37.51% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotateX(180deg) rotate(161.5deg);
+	}
+	50% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotateX(180deg) rotate(161.5deg);
+	}
+	50.01% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotate(180deg);
+	}
+	62.5% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotate(180deg);
+	}
+	62.51% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotateX(180deg) rotate(251.5deg);
+	}
+	75% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotateX(180deg) rotate(251.5deg);
+	}
+	75.01% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotate(90deg);
+	}
+	87.5% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotate(90deg);
+	}
+	87.51% {
+	    stroke-dashoffset: 56.54867px;
+	    transform: rotateX(180deg) rotate(341.5deg);
+	}
+	100% {
+	    stroke-dashoffset: 268.60617px;
+	    transform: rotateX(180deg) rotate(341.5deg);
+	}
+}
+
+.loader {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	// background: rgba(40,70,200,.5);
+	z-index: 100;
+	justify-content: center;
+    align-items: center;
+}
