--- a/src/app/desktop/desktop.component.html
+++ b/src/app/desktop/desktop.component.html
@@ -9,7 +9,7 @@
 <div class="row message">
 	<div class="half">
 		<div class="avatar">
-			<img src="https://imgur.com/L3MD9ZS.jpg" alt="">
+			<img [src]="service.myAvatar" alt="">
 		</div>
 	</div>
 	<div class="half">
