--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <li class="btn" 
           [routerLink]="['/messages']" 
           routerLinkActive="active"
-        >Мои сообщения</li>
+        >Мои сообщения <span class="btn-num">1</span></li>
 
         <li class="btn" (click)="exit()">Выход</li>
       </ul>
