--- a/src/app/main.style.less
+++ b/src/app/main.style.less
@@ -309,11 +309,42 @@ msg-in-list {
     color: white;
     min-width: 120px;
 
+    position: relative;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+
+    & .btn-num {
+		height: 10px;
+	    width: 10px;
+	    // content: '1';
+	    padding: 3px;
+	    font-size: 10px;
+	    background: @color;
+	    line-height: 12px;
+	    padding: 5px;
+	    border-radius: 12px;
+	    display: inline-flex;
+	    justify-content: center;
+	    align-items: center;
+	    position: absolute;
+	    right: 9px;
+	    bottom: 9px;
+	}
+
 	&:hover,.active {
 		background: @color;
+
+	    & .btn-num {
+		    background: rgba(0, 0, 0, 0.5);
+		}
 	}
 	&.active {
 		background: @color; //#424242;
+
+	    & .btn-num {
+		    background: rgba(0, 0, 0, 0.5);
+		}
 	}
 
 	&:focus {
@@ -322,17 +353,19 @@ msg-in-list {
 }
 
 
+
+
 .load {
 	display: inline-block;
     height: 10px;
     width: 47px;
-    background: url(https://imgur.com/NVgJ9e8.gif) no-repeat;
+    background: url(../img/dark.gif) no-repeat;
     background-size: auto 7px;
     background-position: left bottom;
 
-    &:hover {
-    	background-image: url(https://imgur.com/QKOLZKv.gif);
-    }
+    // &:hover {
+    // 	background-image: url(https://imgur.com/QKOLZKv.gif);
+    // }
 }
 
 
