--- a/src/app/main.style.less
+++ b/src/app/main.style.less
@@ -172,6 +172,15 @@ editlabel {
 	background: #626262;
 	line-height: 24px;
 
+	&.alert {
+		margin-top: 50px;
+		background: rgba(255, 0, 0,.2);
+
+		& .message-wrapper {
+			font-size: 14px;
+		}
+	}
+
 	& .message-wrapper {
 		margin-left: 0;
 		text-align: center;
