--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -50,6 +50,7 @@
 			<input type="text" 
 				[(ngModel)]="service.refContacts[id].newMsg" 
 				(keydown)="enter($event)"
+				id="input"
 				placeholder="Сообщение">
 		</div>
 	</div>
